# WorkTimeCalc

./: .gitignore  CMakeLists.txt  README.md  installer.sh  main.c  wtc.sh
src/: main.c
